/*
 * Copyright (C) 2017 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.dac.proto.model.system;

option java_package = "com.dremio.dac.proto.model.system";
option optimize_for = SPEED;

option java_outer_classname = "SystemProtobuf";

message NodeInfo {
  required string name = 1;
  optional string ip = 2;
  optional string port = 3;
  optional string cpu = 4;
  optional string memory = 5;
  optional string status = 6;
}